--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
